# nordea-analytics

./: .gitignore  .readthedocs.yaml  README.md  __init__.py  bamboo.bat  bond_key_figure_name.py  config.yml  mypy.ini  noxfile.py  pyproject.toml  setup.cfg  test_analytics_service.py
.guthub/workflows/: publish-to-test-pypi.yml
data/: _v1_timeseries__DK0002044551,DE0001141794_quote_yield_modduration_accint_bpvp_cvxp_modified_bpv_2021-01-01_2021-07-06.txt  historical_curves__2021-01-01_2021-07-06_DKKGOV_nelsonsiegel_30360_0.5_1.txt  historical_curves__2021-01-01_2021-07-06_DKKSWAP_bootstrap_30360_0.5_1_Spot.txt  historical_curves__2021-01-01_2021-07-06_DKKSWAP_bootstrap_act365_0.5_1.txt  historical_timeseries__DK0002044551,DE0001141794_quote_yield_modduration_spread_accint_bpvp_cvxp_2021-01-01_2021-07-06.txt  historical_timeseries__DK0002044551_DE0001141794_quote_yield_modduration_spread_accint_2021-01-01_2021-07-06.txt  historical_timeseries__DK0002044551_DE0001141794_quote_yield_modduration_spread_accint_bpvp_cvxp_2021-01-01_2021-07-06.txt  http_services_analytics_prod_oneadr_netdataretrieval.txt  indices__DK Mtg Callable_DK Govt_2021-07-06.txt  instruments_keyfigure__DK0002044551,DE0001141794_quote_yield_modduration_accint_bpvp_cvxp_modified_bpv_2021-07-06.txt  instruments_keyfigure__DK0002044551_DE0001141794_quote_yield_modduration_spread_accint_bpvp_cvxp_2021-07-06.txt  proxy_info.txt  v1_bond_keyfigure_DK0002044551,DE0001141794_quote_yield_modduration_accint_bpvp_cvxp_modified_bpv_2021-07-06.txt
data/expected_results/: 010121-060721_time_series_http_services_analytics_prod_oneadr_netdataretrieval.csv  010121-060721_time_series_http_services_analytics_prod_oneadr_netdataretrieval.txt  010121-060721curve_time_series.csv  060720-060721_time_series.txt  060721_index_composition_df_https_api_nordeaopenbanking_comanalytics.csv  060721_key_figures.csv  060721_key_figures_df.csv  060721_key_figures_http_dataretrieval_nordeaopenbanking_com.txt  060721_key_figures_http_services_analytics_prod_oneadr_netdataretrieval.txt  DKKGOV_010121-060721_curve_time_series_https_api_nordeaopenbanking_comanalytics.txt  DKKSWAP_010121-060721_curve_time_series.csv  DKKSWAP_010121-060721_curve_time_series.txt  get_user_from_file.txt  proxies_from_code_results_http_dataretrieval_nordeaopenbanking_com.txt  proxies_from_code_results_https_api_nordeaopenbanking_comanalytics.txt
docs/source/: bond_key_figures.rst  conf.py  getting_started.rst
nalib/: credentials.py  data_retrieval_client.py  util.py
requirements/: requirements-docs.in  requirements-docs.txt
requirements/py311/: requirements.in  requirements.txt
requirements/py36/: requirements-dev.txt  requirements.in  requirements.txt
requirements/py37/: requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  requirements.in  requirements.txt
requirements/py38/: requirements-dev.txt  requirements.txt
requirements/py39/: requirements-dev.in  requirements-dev.txt  requirements-tests.in  requirements-tests.txt  requirements.in  requirements.txt
source/: getting_started.rst  index.rst
test_tool/: cli_tool.py  get_bond_key_figures.bat  get_index_composition.bat  get_time_series.bat  input_bond_key_figures.txt  input_index_composition.txt  input_time_series.txt
tests/: __init__.py  conftest.py  test_analytics_service.py  test_data_retrieval_client.py  test_data_retrieval_cliet.py  test_proxy_finder.py  test_util.py  util.py
(+164 files in other folders)
