[build-system]
requires = [
    "setuptools>=46.4",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["nordea_analytics"]
omit = ["*\\__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 0