[metadata]
name = nordea-analytics
version = attr: nordea_analytics.__version__
author = Nordea Desk Quants and Markets Advisory Tools
author_email = E-advisorySupport@nordea.com
description = Nordea Analytics Python library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NordeaOSS/nordea-analytics

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    pandas>=1,<1.3; python_version < "3.7"
    pandas>=1,<2
    numpy>=1,<2
    requests>=2,<3
    pyaml>=20,<22
    python-certifi-win32

[options.packages.find]
where = src
